log
Fri, Mar 21, 2025 11:47:45 AM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Fri, Mar 21, 2025 11:48:31 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4fe677d
Fri, Mar 21, 2025 11:48:38 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8118e8a
Fri, Mar 21, 2025 11:48:42 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e768e41
Fri, Mar 21, 2025 11:48:58 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0778f39
Fri, Mar 21, 2025 11:50:34 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2f4cf93
Fri, Mar 21, 2025 11:51:13 AM: 
 exercises.c | 25 ++++++++++---------------
 1 file changed, 10 insertions(+), 15 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(L, elemento);
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3d39613
Fri, Mar 21, 2025 11:51:52 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(L, elemento);
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5c0ee92
Fri, Mar 21, 2025 11:52:19 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(L, elemento);
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9d061e9
Fri, Mar 21, 2025 11:52:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:19: error: passing argument 1 of 'pushBack' from incompatible pointer type [-Werror=incompatible-pointer-types]
          pushBack(&L, elemento);
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'List * {aka struct List *}' but argument is of type 'List ** {aka struct List **}'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
68a1b13
Fri, Mar 21, 2025 11:52:53 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
54af82f
Fri, Mar 21, 2025 11:57:02 AM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c09dc8e
Fri, Mar 21, 2025 12:02:37 PM: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
e3395bf
Sat, Mar 22, 2025  3:41:10 PM: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
26c28c6
Sat, Mar 22, 2025  3:44:11 PM: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  4|1
total_score: 50/70
c920997
